Chapter_06_Custom_Resource_Definitions/5.03/manifests/greeter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: greeter
