Chapter_06_Custom_Resource_Definitions/5.03/manifests/greeter-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greeter
spec:
  parentRefs:
    - name: log-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /greeter
      backendRefs:
        - name: greeter-svc-1
          port: 80
          weight: 50
        - name: greeter-svc-2
          port: 80
          weight: 50
